SimpleParser.java
// Generated from Simple.g4 by ANTLR 4.5.2

	import java.util.TreeMap;
	import java.io.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SimpleParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, NUM=14, ID=15, WS=16;
	public static final int
		RULE_start = 0, RULE_prog = 1, RULE_expr = 2, RULE_repeatStmt = 3, RULE_block = 4, 
		RULE_stmt = 5, RULE_printStmt = 6, RULE_exprList = 7, RULE_assignStmt = 8, 
		RULE_term = 9, RULE_factor = 10;
	public static final String[] ruleNames = {
		"start", "prog", "expr", "repeatStmt", "block", "stmt", "printStmt", "exprList", 
		"assignStmt", "term", "factor"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'+'", "'-'", "'repeat'", "'{'", "'}'", "'print'", "'('", "')'", 
		"','", "'let'", "'='", "'*'", "'/'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, "NUM", "ID", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Simple.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


		private String projectName;

	 	public SimpleParser(String fileName) throws java.io.IOException {
		    super(new CommonTokenStream(new SimpleLexer(new ANTLRFileStream(fileName))));
		    _interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
		    projectName = fileName;
		}
	  
	  	public String getProjectName() {
	    return projectName;
	  	}
		
		public static int varNumber = 0;
		public static int loop_counter = 0;
		public static TreeMap<String, Integer> varID = new TreeMap<String, Integer>();

	public SimpleParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StartContext extends ParserRuleContext {
		public ProgContext prog;
		public List<TerminalNode> EOF() { return getTokens(SimpleParser.EOF); }
		public TerminalNode EOF(int i) {
			return getToken(SimpleParser.EOF, i);
		}
		public List<ProgContext> prog() {
			return getRuleContexts(ProgContext.class);
		}
		public ProgContext prog(int i) {
			return getRuleContext(ProgContext.class,i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			System.out.println(".class public " + this.getProjectName() + "\n.super java/lang/Object"
				+ "\n\n.method public <init>()V\n\taload_0\n\tinvokenonvirtual java/lang/Object/<init>()V\n\treturn\n.end method"
				+ "\n.method public static main([Ljava/lang/String;)V\n\t.limit stack 50\n\t.limit locals 10\n\n");
			setState(26); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(23);
				((StartContext)_localctx).prog = prog();
				System.out.println(((StartContext)_localctx).prog.sProg);
				}
				}
				setState(28); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__5) | (1L << T__9))) != 0) );
			setState(30);
			match(EOF);
			System.out.println("\n\treturn\n\n.end method");
			setState(32);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgContext extends ParserRuleContext {
		public String sProg;
		public BlockContext block;
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34);
			((ProgContext)_localctx).block = block();

						((ProgContext)_localctx).sProg =  ((ProgContext)_localctx).block.sBlock;
				
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public String sExpr;
		public TermContext term;
		public Token NUM;
		public TermContext t1;
		public TermContext t2;
		public ExprContext m2;
		public ExprContext m4;
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public TerminalNode NUM() { return getToken(SimpleParser.NUM, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_expr);
		try {
			setState(72);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(37);
				((ExprContext)_localctx).term = term();
				setState(38);
				match(T__0);
				setState(39);
				((ExprContext)_localctx).NUM = match(NUM);

				  		((ExprContext)_localctx).sExpr =  "iload " + ((ExprContext)_localctx).term.sTerm + "\n\tldc " + ((ExprContext)_localctx).NUM.getText() + "\n\tiadd\n";
				  	
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(42);
				((ExprContext)_localctx).t1 = term();
				setState(43);
				match(T__0);
				setState(44);
				((ExprContext)_localctx).t2 = term();

						((ExprContext)_localctx).sExpr =  "iload " + ((ExprContext)_localctx).t1.sTerm + "\n\tiload " + ((ExprContext)_localctx).t2.sTerm + "\n\tiadd\n";
					
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(47);
				((ExprContext)_localctx).term = term();
				setState(48);
				match(T__0);
				setState(49);
				((ExprContext)_localctx).m2 = expr();

						((ExprContext)_localctx).sExpr =  "iload " + ((ExprContext)_localctx).term.sTerm + "\n\tiload " + varID.get(((ExprContext)_localctx).m2.sExpr) + "\n\tiadd\n";
					
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(52);
				((ExprContext)_localctx).term = term();
				setState(53);
				match(T__1);
				setState(54);
				((ExprContext)_localctx).NUM = match(NUM);

						((ExprContext)_localctx).sExpr =  "iload " + ((ExprContext)_localctx).term.sTerm + "\n\tldc " + ((ExprContext)_localctx).NUM.getText() + "\n\tisub\n";
					
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(57);
				((ExprContext)_localctx).t1 = term();
				setState(58);
				match(T__1);
				setState(59);
				((ExprContext)_localctx).t2 = term();

						((ExprContext)_localctx).sExpr =  "iload " + ((ExprContext)_localctx).t1.sTerm + "\n\tiload " + ((ExprContext)_localctx).t2.sTerm + "\n\tisub\n";
					
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(62);
				((ExprContext)_localctx).term = term();
				setState(63);
				match(T__1);
				setState(64);
				((ExprContext)_localctx).m4 = expr();

						((ExprContext)_localctx).sExpr =  "iload " + ((ExprContext)_localctx).term.sTerm + "\n\tiload " + varID.get(((ExprContext)_localctx).m4.sExpr) + "\n\tisub\n";
					
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(67);
				((ExprContext)_localctx).NUM = match(NUM);

						((ExprContext)_localctx).sExpr =  "ldc " + ((ExprContext)_localctx).NUM.getText();
					
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(69);
				((ExprContext)_localctx).term = term();

						((ExprContext)_localctx).sExpr =  "iload " + ((ExprContext)_localctx).term.sTerm;
					
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RepeatStmtContext extends ParserRuleContext {
		public String sRpt;
		public ExprContext expr;
		public BlockContext block;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public RepeatStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_repeatStmt; }
	}

	public final RepeatStmtContext repeatStmt() throws RecognitionException {
		RepeatStmtContext _localctx = new RepeatStmtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_repeatStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(T__2);
			setState(75);
			((RepeatStmtContext)_localctx).expr = expr();
			setState(76);
			match(T__3);
			setState(77);
			((RepeatStmtContext)_localctx).block = block();
			setState(78);
			match(T__4);

			    	((RepeatStmtContext)_localctx).sRpt =  "\n\n\tiload 0\n\tistore " + varNumber + "\n\t "+ ((RepeatStmtContext)_localctx).expr.sExpr + "\n\tistore " + (varNumber+1) + "\n\n\tloop_" + loop_counter + ":\n" + 
			    	((RepeatStmtContext)_localctx).block.sBlock + "\n\tiinc " + varNumber + " 1\n\tiload " + varNumber + "\n\tiload " + (varNumber+1) + "\n\tif_icmplt loop_" + loop_counter;
			    	loop_counter++;
			    	varNumber += 2;
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public String sBlock;
		public StmtContext stmt;
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_block);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			((BlockContext)_localctx).sBlock =  "";
			setState(85); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(82);
					((BlockContext)_localctx).stmt = stmt();
					_localctx.sBlock += ((BlockContext)_localctx).stmt.sStmt + "\n";
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(87); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public String sStmt;
		public PrintStmtContext printStmt;
		public AssignStmtContext assignStmt;
		public RepeatStmtContext repeatStmt;
		public PrintStmtContext printStmt() {
			return getRuleContext(PrintStmtContext.class,0);
		}
		public AssignStmtContext assignStmt() {
			return getRuleContext(AssignStmtContext.class,0);
		}
		public RepeatStmtContext repeatStmt() {
			return getRuleContext(RepeatStmtContext.class,0);
		}
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_stmt);
		try {
			setState(98);
			switch (_input.LA(1)) {
			case T__5:
				enterOuterAlt(_localctx, 1);
				{
				setState(89);
				((StmtContext)_localctx).printStmt = printStmt();

							((StmtContext)_localctx).sStmt =  ((StmtContext)_localctx).printStmt.sPrintStmt;
						
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 2);
				{
				setState(92);
				((StmtContext)_localctx).assignStmt = assignStmt();

							((StmtContext)_localctx).sStmt =  ((StmtContext)_localctx).assignStmt.sAssign;
						
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 3);
				{
				setState(95);
				((StmtContext)_localctx).repeatStmt = repeatStmt();

							((StmtContext)_localctx).sStmt =  ((StmtContext)_localctx).repeatStmt.sRpt;
						
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintStmtContext extends ParserRuleContext {
		public String sPrintStmt;
		public ExprListContext exprList;
		public ExprListContext exprList() {
			return getRuleContext(ExprListContext.class,0);
		}
		public PrintStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_printStmt; }
	}

	public final PrintStmtContext printStmt() throws RecognitionException {
		PrintStmtContext _localctx = new PrintStmtContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_printStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(T__5);
			setState(101);
			match(T__6);
			setState(102);
			((PrintStmtContext)_localctx).exprList = exprList();
			setState(103);
			match(T__7);

						String[] sExprs = ((PrintStmtContext)_localctx).exprList.sExprList.split(",");
						((PrintStmtContext)_localctx).sPrintStmt =  "";
						for(String ex : sExprs){
							_localctx.sPrintStmt += "\tgetstatic java/lang/System/out Ljava/io/PrintStream;\n\n\t " + ex + "\n\tinvokevirtual java/io/PrintStream/print(I)V\n\t"
							+ "getstatic java/lang/System/out Ljava/io/PrintStream;\n\tldc " + "\" \"" + "\n\tinvokevirtual java/io/PrintStream/print(Ljava/lang/String;)V\n\n";
						}
						_localctx.sPrintStmt += "\tgetstatic java/lang/System/out Ljava/io/PrintStream;\n\tldc " + "\"\"" + "\n\tinvokevirtual java/io/PrintStream/println(Ljava/lang/String;)V\n\n";

					
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprListContext extends ParserRuleContext {
		public String sExprList;
		public ExprContext expr;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public ExprListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exprList; }
	}

	public final ExprListContext exprList() throws RecognitionException {
		ExprListContext _localctx = new ExprListContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_exprList);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			((ExprListContext)_localctx).sExprList =  "";
			setState(113);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(107);
					((ExprListContext)_localctx).expr = expr();
					setState(108);
					match(T__8);
					 _localctx.sExprList += ((ExprListContext)_localctx).expr.sExpr + ","; 
					}
					} 
				}
				setState(115);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			setState(116);
			((ExprListContext)_localctx).expr = expr();
			 _localctx.sExprList += ((ExprListContext)_localctx).expr.sExpr + ","; 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignStmtContext extends ParserRuleContext {
		public String sAssign;
		public Token ID;
		public Token NUM;
		public ExprContext expr;
		public TerminalNode ID() { return getToken(SimpleParser.ID, 0); }
		public TerminalNode NUM() { return getToken(SimpleParser.NUM, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AssignStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignStmt; }
	}

	public final AssignStmtContext assignStmt() throws RecognitionException {
		AssignStmtContext _localctx = new AssignStmtContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_assignStmt);
		try {
			setState(130);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(119);
				match(T__9);
				setState(120);
				((AssignStmtContext)_localctx).ID = match(ID);
				setState(121);
				match(T__10);
				setState(122);
				((AssignStmtContext)_localctx).NUM = match(NUM);

				    	int v = varNumber;
				    	
				    	if(varID.get(((AssignStmtContext)_localctx).ID.getText())!= null){
				    		v = varID.get(((AssignStmtContext)_localctx).ID.getText());
				    	}
				    	else{
				    		varID.put(((AssignStmtContext)_localctx).ID.getText(), varNumber);
				    		varNumber++;
				    	}
				    	((AssignStmtContext)_localctx).sAssign =  "\tldc " + ((AssignStmtContext)_localctx).NUM.getText() + "\n\tistore " + v + "\n";
				    
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(124);
				match(T__9);
				setState(125);
				((AssignStmtContext)_localctx).ID = match(ID);
				setState(126);
				match(T__10);
				setState(127);
				((AssignStmtContext)_localctx).expr = expr();

				    	int v = varNumber;
				    	
				    	if(varID.get(((AssignStmtContext)_localctx).ID.getText())!= null){
				    		v = varID.get(((AssignStmtContext)_localctx).ID.getText());
				    	}
				    	else{
				    		varID.put(((AssignStmtContext)_localctx).ID.getText(), varNumber);
				    		varNumber++;
				    	}
				    	((AssignStmtContext)_localctx).sAssign =  "\t" + ((AssignStmtContext)_localctx).expr.sExpr + "\n\tistore " + v + "\n";
				    
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermContext extends ParserRuleContext {
		public String sTerm;
		public FactorContext factor;
		public Token NUM;
		public TermContext t1;
		public TermContext t2;
		public FactorContext factor() {
			return getRuleContext(FactorContext.class,0);
		}
		public TerminalNode NUM() { return getToken(SimpleParser.NUM, 0); }
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public TermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_term; }
	}

	public final TermContext term() throws RecognitionException {
		TermContext _localctx = new TermContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_term);
		try {
			setState(155);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(132);
				((TermContext)_localctx).factor = factor();
				setState(133);
				match(T__11);
				setState(134);
				((TermContext)_localctx).NUM = match(NUM);

						((TermContext)_localctx).sTerm =  varID.get(((TermContext)_localctx).factor.sFactor) + "\n\tldc " + ((TermContext)_localctx).NUM.getText() + "\n\timul\n";
					
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(137);
				((TermContext)_localctx).factor = factor();
				setState(138);
				match(T__11);
				setState(139);
				((TermContext)_localctx).t1 = term();

						((TermContext)_localctx).sTerm =  varID.get(((TermContext)_localctx).factor.sFactor) + "\n\tiload " + varID.get(((TermContext)_localctx).t1.sTerm) + "\n\timul\n";
					
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(142);
				((TermContext)_localctx).factor = factor();
				setState(143);
				match(T__12);
				setState(144);
				((TermContext)_localctx).NUM = match(NUM);

						((TermContext)_localctx).sTerm =  varID.get(((TermContext)_localctx).factor.sFactor) + "\n\tldc " + ((TermContext)_localctx).NUM.getText() + "\n\tidiv\n";
					
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(147);
				((TermContext)_localctx).factor = factor();
				setState(148);
				match(T__12);
				setState(149);
				((TermContext)_localctx).t2 = term();

						((TermContext)_localctx).sTerm =  varID.get(((TermContext)_localctx).factor.sFactor) + "\n\tiload " + varID.get(((TermContext)_localctx).t2.sTerm) + "\n\tidiv\n";
					
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(152);
				((TermContext)_localctx).factor = factor();

						((TermContext)_localctx).sTerm =  varID.get(((TermContext)_localctx).factor.sFactor) + "";
					
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FactorContext extends ParserRuleContext {
		public String sFactor;
		public Token ID;
		public Token NUM;
		public TerminalNode ID() { return getToken(SimpleParser.ID, 0); }
		public TerminalNode NUM() { return getToken(SimpleParser.NUM, 0); }
		public FactorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_factor; }
	}

	public final FactorContext factor() throws RecognitionException {
		FactorContext _localctx = new FactorContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_factor);
		try {
			setState(161);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(157);
				((FactorContext)_localctx).ID = match(ID);
